--- a/src/view/forms/BasicsForm.mxml
+++ b/src/view/forms/BasicsForm.mxml
@@ -12,26 +12,26 @@
 	<s:FormHeading label="Position" skinClass="skins.FormHeadingSkin"/>
 	<s:FormItem label="X" skinClass="skins.FormItemSkin">
 		<s:TextInput id="xInput"
-					 text="{selectedComponent.x}"
+					 text="{selectedComponent.x}" skinClass="skins.TextInputSkin"
 					 keyDown="xInput_keyDownHandler(event)" width="100%"
 					 focusOut="commitX()" enter="commitX()" tabIndex="1"/>
 	</s:FormItem>
 	<s:FormItem label="Y" skinClass="skins.FormItemSkin" >
 		<s:TextInput id="yInput"
-					 text="{selectedComponent.y}"
+					 text="{selectedComponent.y}" skinClass="skins.TextInputSkin"
 					 keyDown="yInput_keyDownHandler(event)" width="100%"
 					 focusOut="commitY()" enter="commitY()" tabIndex="2"/>
 	</s:FormItem>
 	<s:FormHeading label="Size" skinClass="skins.FormHeadingSkin"/>
 	<s:FormItem label="Width" skinClass="skins.FormItemSkin">
 		<s:TextInput id="widthInput"
-					 text="{selectedComponentComputedWidth}"
+					 text="{selectedComponentComputedWidth}" skinClass="skins.TextInputSkin"
 					 keyDown="widthInput_keyDownHandler(event)" width="100%"
 					 focusOut="commitWidth()" enter="commitWidth()" tabIndex="3"/>
 	</s:FormItem>
 	<s:FormItem label="Height" skinClass="skins.FormItemSkin">
 		<s:TextInput id="heightInput"
-					 text="{selectedComponentComputedHeight}"
+					 text="{selectedComponentComputedHeight}" skinClass="skins.TextInputSkin"
 					 keyDown="heightInput_keyDownHandler(event)" width="100%"
 					 focusOut="commitHeight()" enter="commitHeight()" tabIndex="4"/>
 	</s:FormItem>
