--- a/src/view/forms/DataProviderItemRenderer.mxml
+++ b/src/view/forms/DataProviderItemRenderer.mxml
@@ -13,7 +13,7 @@
 		paddingTop="4" paddingRight="5" paddingBottom="4" paddingLeft="5"
 		doubleClickEnabled="true" doubleClick="startEditing()"/>
 	<s:TextInput id="input" text="{DataProviderListItem(data).label}"
-		visible="{editing}" includeInLayout="{editing}"
+		visible="{editing}" includeInLayout="{editing}" skinClass="skins.TextInputSkin"
 		enter="commitChanges()" focusOut="commitChanges()"/>
 
 	<fx:Script><![CDATA[
