--- a/src/view/primeFaces/forms/BasicsForm.mxml
+++ b/src/view/primeFaces/forms/BasicsForm.mxml
@@ -9,14 +9,14 @@
 	<s:FormHeading label="Size" skinClass="skins.FormHeadingSkin"/>
 	<s:FormItem label="Width" skinClass="skins.FormItemSkin">
 		<s:TextInput id="widthInput" width="100%"
-					 text="{selectedComponentComputedWidth}"
-					 keyDown="widthInput_keyDownHandler(event)"
+					 text="{selectedComponentComputedWidth}" skinClass="skins.TextInputSkin"
+					 keyDown="widthInput_keyDownHandler(event)" height="25"
 					 focusOut="commitWidth()" enter="commitWidth()" tabIndex="3"/>
 	</s:FormItem>
 	<s:FormItem label="Height" skinClass="skins.FormItemSkin">
 		<s:TextInput id="heightInput" width="100%"
-					 text="{selectedComponentComputedHeight}"
-					 keyDown="heightInput_keyDownHandler(event)"
+					 text="{selectedComponentComputedHeight}" skinClass="skins.TextInputSkin"
+					 keyDown="heightInput_keyDownHandler(event)" height="25"
 					 focusOut="commitHeight()" enter="commitHeight()" tabIndex="4"/>
 	</s:FormItem>
 	<fx:Script><![CDATA[
