--- a/src/view/primeFaces/forms/MaskedTextInputForm.mxml
+++ b/src/view/primeFaces/forms/MaskedTextInputForm.mxml
@@ -2,7 +2,7 @@
 <suportclasses:BasePropertyEditorForm xmlns:fx="http://ns.adobe.com/mxml/2009"
                                       xmlns:suportclasses="view.suportClasses.*"
                                       xmlns:s="library://ns.adobe.com/flex/spark" xmlns:components="components.*"
-                                      skinClass="skins.FormSkin">
+                                      skinClass="skins.FormSkin" creationComplete="onMaskedTextInputFormCreationComplete(event)">
     <suportclasses:layout>
         <s:FormLayout />
     </suportclasses:layout>
@@ -17,6 +17,7 @@
     <fx:Script><![CDATA[
         import mx.binding.utils.BindingUtils;
         import mx.binding.utils.ChangeWatcher;
+        import mx.events.FlexEvent;
 
         import view.interfaces.ISurfaceComponent;
 
@@ -27,7 +28,7 @@
         public var bindableText:String;
 
         [Bindable]
-        public var bindableMaskText:String = "";
+        public var bindableMaskText:String;
 
         private var _label:String = "Text";
 
@@ -128,6 +129,11 @@
                 return;
             }
             this._bindingMask = BindingUtils.bindProperty(this, "bindableMaskText", this.selectedItem, this._maskProperty, true);
+        }
+
+        private function onMaskedTextInputFormCreationComplete(event:FlexEvent):void
+        {
+            textInput.prompt = "(999) 999-9999";
         }
         ]]></fx:Script>
 </suportclasses:BasePropertyEditorForm>
