--- a/src/view/primeFaces/forms/BasicsForm.mxml
+++ b/src/view/primeFaces/forms/BasicsForm.mxml
@@ -2,7 +2,8 @@
 <suportclasses:BasePropertyEditorForm xmlns:fx="http://ns.adobe.com/mxml/2009"
 									  xmlns:s="library://ns.adobe.com/flex/spark"
 									  xmlns:suportclasses="view.suportClasses.*"
-									  skinClass="skins.FormSkin">
+									  skinClass="skins.FormSkin"
+									  creationComplete="onBasicFormCreationComplete(event)">
 	<suportclasses:layout>
 		<s:FormLayout />
 	</suportclasses:layout>
@@ -151,7 +152,7 @@
 			{
 				newWidth = maxWidth;
 			}
-			this.selectedItem.percentWidth = NaN;
+			this.selectedItem.percentWidth = Number.NaN;
 			this.selectedItem.width = newWidth;
 			//the text might not have updated if the width property is the same
 			//but the old text value is different
@@ -165,12 +166,12 @@
 
 			if (isWidth)
 			{
-				this.selectedItem.width = 0;
+				this.selectedItem.width = Number.NaN;
 				this.selectedItem.percentWidth = Number(newValue);
 			}
 			else
 			{
-				this.selectedItem.height = 0;
+				this.selectedItem.height = Number.NaN;
 				this.selectedItem.percentHeight = Number(newValue);
 			}
 		}
@@ -187,6 +188,7 @@
 			{
 				newHeight = maxHeight;
 			}
+			this.selectedItem.percentHeight = Number.NaN;
 			this.selectedItem.height = newHeight;
 			//the text might not have updated if the height property is the same
 			//but the old text value is different
