PrimeFaces: - Add Fieldset component - Displaying icon is broken - Add CollapsiblePanel which is base class for Fieldset - Add ToggleImageButton which is used in Fieldset (reference prominic/Moonshine-IDE#199)

--- a/src/view/ComponentList.mxml
+++ b/src/view/ComponentList.mxml
@@ -27,6 +27,7 @@
         import view.flex.surfaceComponents.components.Container;
 		import view.primeFaces.surfaceComponents.components.AutoCompleteDropDownList;
 		import view.primeFaces.surfaceComponents.components.Button;
+		import view.primeFaces.surfaceComponents.components.Fieldset;
 		import view.primeFaces.surfaceComponents.components.InputMask;
 		import view.primeFaces.surfaceComponents.components.InputNumber;
 		import view.primeFaces.surfaceComponents.components.OutputLabel;
@@ -72,7 +73,8 @@
 					new ComponentListItem("InputMask", InputMask),
 					new ComponentListItem("InputNumber", InputNumber),
 					new ComponentListItem("OutputLabel", OutputLabel),
-					new ComponentListItem("AutoComplete", AutoCompleteDropDownList)
+					new ComponentListItem("AutoComplete", AutoCompleteDropDownList),
+					new ComponentListItem("Fieldset", Fieldset)
 				]);
 			}
 
