SelectBooleanCheckbox updated with itemLabel; base class API changed from ToggleButton to Checkbox (reference prominic/Moonshine-IDE#199)

--- a/src/view/primeFaces/propertyEditors/CheckboxPropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/CheckboxPropertyEditor.mxml
@@ -11,5 +11,6 @@
 	<primeFaces:BasicsForm/>
 
 	<s:FormHeading label="Data" skinClass="skins.FormHeadingSkin" />
+	<forms:TextForm label="Value" textProperty="label"/>
 	<forms:ToggleButtonSelectedForm label="Selected" textProperty="selected"/>
 </suportclasses:BasePropertyEditor>
