--- a/src/view/EditingSurface.mxml
+++ b/src/view/EditingSurface.mxml
@@ -34,7 +34,10 @@
 
 		import spark.components.Group;
 		import spark.components.SkinnableContainer;
+		import spark.components.supportClasses.GroupBase;
 		import spark.components.supportClasses.ScrollBarBase;
+		import spark.components.supportClasses.SkinnableContainerBase;
+		import spark.containers.Navigator;
 		import spark.events.IndexChangeEvent;
 
 		import utils.EditingSurfaceReader;
@@ -158,6 +161,12 @@
 			{
 				itemContainer = SkinnableContainer(item);
 			}
+			else if (item is Navigator)
+			{
+				this.prepareContainer(item as SkinnableContainerBase);
+				return;
+			}
+
 			this.prepareContainer(itemContainer);
 		}
 
@@ -183,14 +192,22 @@
 			{
 				itemContainer = SkinnableContainer(item);
 			}
+			else if (item is Navigator)
+			{
+				this.cleanupContainer(item as SkinnableContainerBase);
+
+				this.selectedItem = null;
+				hasChanged = this.numElements > 0 && _wasLoaded;
+				return;
+			}
+
 			this.cleanupContainer(itemContainer);
 
 			this.selectedItem = null;
-
 			hasChanged = this.numElements > 0 && _wasLoaded;
 		}
 
-		private function prepareContainer(container:SkinnableContainer):void
+		private function prepareContainer(container:SkinnableContainerBase):void
 		{
 			if (container === null)
 			{
@@ -201,7 +218,7 @@
 			container.addEventListener(DragEvent.DRAG_DROP, skinnableContainer_dragDropHandler);
 		}
 
-		private function cleanupContainer(container:SkinnableContainer):void
+		private function cleanupContainer(container:SkinnableContainerBase):void
 		{
 			if (container === null)
 			{
@@ -212,7 +229,7 @@
 			container.removeEventListener(DragEvent.DRAG_DROP, skinnableContainer_dragDropHandler);
 		}
 
-		private function showDropOverlay(dropTarget:Group):void
+		private function showDropOverlay(dropTarget:GroupBase):void
 		{
 			var currentTarget:DisplayObjectContainer = dropTarget;
 			//we need to calculated the visible rectangular region where we can
@@ -403,14 +420,15 @@
 				return;
 			}
 			var object:ISurfaceComponent = ISurfaceComponent(dragSource.dataForFormat(ComponentListItemRenderer.COMPONENT_DRAG_FORMAT));
-			var container:SkinnableContainer = SkinnableContainer(event.currentTarget);
+			var container:SkinnableContainerBase = SkinnableContainerBase(event.currentTarget);
 			if (object.contains(container))
 			{
 				//don't allow a container to be dropped on itself or one of its
 				//children!
 				return;
 			}
-			var contentGroup:Group = container.contentGroup;
+			var contentGroup:GroupBase = container is Navigator ?
+					(container as Navigator).contentGroup : (container as SkinnableContainer).contentGroup;
 			var position:Point = new Point(event.stageX, event.stageY);
 			position = contentGroup.globalToLocal(position);
 			if (position.x >= 0 && position.y >= 0 &&
