--- a/src/skins/tabNavigator/TabBarWithScrollerSkin.mxml
+++ b/src/skins/tabNavigator/TabBarWithScrollerSkin.mxml
@@ -74,29 +74,30 @@ created by the TabBarSkin use the TabBarButtonSkin class.
             
         ]]>            
     </fx:Script>
-    
-    <s:states>
-        <s:State name="normal" />
-        <s:State name="disabled" />
+
+	<s:states>
+		<s:State name="normal" />
+		<s:State name="disabled" />
 		<s:State name="normalWithTopScroller" stateGroups="withScroller"/>
 		<s:State name="normalWithBottomScroller" stateGroups="withScroller"/>
-    </s:states>
-    
+	</s:states>
+
 	<s:Scroller id="tabBarScroller" verticalScrollPolicy="{ScrollPolicy.OFF}"
-				horizontalScrollPolicy="{ScrollPolicy.OFF}" 
+				horizontalScrollPolicy.normal="{ScrollPolicy.OFF}"
 				horizontalScrollPolicy.withScroller="{ScrollPolicy.AUTO}"
-	            percentHeight="100" skinClass="skins.tabNavigator.TabBarScrollerSkin" minViewportInset.withScroller="16"
-				width.withScroller="{hostComponent.width}"
-				bottom.normalWithTopScroller="-16" top.normalWithBottomScroller="-16">
-    	<s:DataGroup id="dataGroup">
-		        <s:layout>
-		            <s:ButtonBarHorizontalLayout gap="-1"/>
-		        </s:layout>
-		        <s:itemRenderer>
-		            <fx:Component>
-		                <s:ButtonBarButton skinClass="spark.skins.spark.TabBarButtonSkin" />
-		            </fx:Component>
-		        </s:itemRenderer>
-	    </s:DataGroup>
-    </s:Scroller>
+				minViewportInset.withScroller="16" minViewportInset.normal="0"
+				bottom.normal="0" top.normal="0" bottom.withScroller="-16" top.withScroller="-16"
+				width.withScroller="{hostComponent.width}" width.normal="100%"
+				skinClass="skins.tabNavigator.TabBarScrollerSkin" >
+		<s:DataGroup id="dataGroup">
+			<s:layout>
+				<s:ButtonBarHorizontalLayout gap="-1"/>
+			</s:layout>
+			<s:itemRenderer>
+				<fx:Component>
+					<s:ButtonBarButton skinClass="spark.skins.spark.TabBarButtonSkin" />
+				</fx:Component>
+			</s:itemRenderer>
+		</s:DataGroup>
+	</s:Scroller>
 </s:Skin>
