--- a/src/view/primeFaces/propertyEditors/TabViewPropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/TabViewPropertyEditor.mxml
@@ -10,6 +10,7 @@
 	<primeFaces:BasicsForm/>
 
 	<s:FormHeading label="Data" skinClass="skins.FormHeadingSkin" />
+	<primeFaces:TabForm />
 	<primeFaces:TabViewOrientationForm textProperty="orientation" label="Orientation"/>
 	<forms:ToggleButtonSelectedForm label="Scrollable" textProperty="scrollable"/>
 
