--- a/src/skins/tabNavigator/TabNavigatorWithOrientationSkin.mxml
+++ b/src/skins/tabNavigator/TabNavigatorWithOrientationSkin.mxml
@@ -20,53 +20,53 @@
 ////////////////////////////////////////////////////////////////////////////////
 -->
 
-<!--- The default skin class for a Spark Navigator container.  
+<!--- The default skin class for a Spark Navigator container.
 
-@see spark.containers.Navigator
+ @see spark.containers.Navigator
 
-@langversion 3.0
-@playerversion Flash 10
-@playerversion AIR 1.5
-@productversion Flex 4
+ @langversion 3.0
+ @playerversion Flash 10
+ @playerversion AIR 1.5
+ @productversion Flex 4
 -->
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
 			 xmlns:tabnavigator="components.tabNavigator.*" xmlns:containers="spark.containers.*"
 			 alpha.disabled="0.5"
-			 layout.normal="{getVerticalLayoutWithoutGap()}"
-			 layout.normalWithTopTabBar="{getVerticalLayoutWithoutGap()}"
-			 layout.normalWithLeftTabBar="{getHorizontalLayoutWithoutGap()}"
-			 layout.normalWithRightTabBar="{getHorizontalLayoutWithoutGap()}"
-			 layout.normalWithBottomTabBar="{getVerticalLayoutWithoutGap()}"
-			 currentStateChange="onTabNavigatoCurrentStateChange(event)">
+			 currentStateChanging="onTabNavigatorCurrentStateChanging(event)"
+			 currentStateChange="onTabNavigatorCurrentStateChange(event)">
 	<fx:Metadata>
-        <![CDATA[ 
-        [HostComponent("components.tabNavigator.TabNavigatorWithOrientation")]
-        ]]>
-    </fx:Metadata> 
+        <![CDATA[
+		[HostComponent("components.tabNavigator.TabNavigatorWithOrientation")]
+		]]>
+    </fx:Metadata>
 	<fx:Script>
 		<![CDATA[
 		import mx.events.StateChangeEvent;
+
+		import spark.layouts.ColumnAlign;
 		import spark.layouts.VerticalLayout;
 		import spark.layouts.HorizontalLayout;
+		import spark.layouts.TileLayout;
+		import spark.layouts.TileOrientation;
 
-		/* Define the skin elements that should not be colorized. 
+		/* Define the skin elements that should not be colorized.
 		For list, the skin itself is colorized but the individual parts are not. */
 		static private const exclusions:Array = [ "contentGroup", "background" , "tabBar"];
-		
+
 		/**
 		 * @private
 		 */
 		override public function get colorizeExclusions():Array { return exclusions; }
-		
+
 		/* Define the content fill items that should be colored by the "contentBackgroundColor" style. */
 		static private const contentFill:Array = [ "bgFill" ];
-		
+
 		/**
 		 * @private
 		 */
 		override public function get contentItems():Array { return contentFill; }
-		
+
 		/**
 		 * @private
 		 */
@@ -75,7 +75,7 @@
 			useChromeColor = true;
 			super.initializationComplete();
 		}
-		
+
 		/**
 		 * @private
 		 */
@@ -93,31 +93,32 @@
 				background.left = background.top = background.right = background.bottom = 0;
 				contentGroup.left = contentGroup.top = contentGroup.right = contentGroup.bottom = 0;
 			}
-			
+
 			borderStroke.color = getStyle( "borderColor" );
 			borderStroke.alpha = getStyle( "borderAlpha" );
-			
+
 			super.updateDisplayList( unscaledWidth, unscaledHeight );
 		}
-		
-		private function onTabNavigatoCurrentStateChange(event:StateChangeEvent):void
+
+		private function onTabNavigatorCurrentStateChange(event:StateChangeEvent):void
 		{
 			if (!this.tabBar || !this.content) return;
-			
+
 			var tabBarIndex:int = this.getElementIndex(this.tabBar);
 			var contentIndex:int = this.getElementIndex(this.content);
-			
-			if (event.newState == "normal" || 
-			    event.newState == "normalWithTopTabBar" ||
-			    event.newState == "normalWithLeftTabBar")
+
+			if (event.newState == "normal" ||
+					event.newState == "normalWithTopTabBar" ||
+					event.newState == "normalWithLeftTabBar")
 			{
+
 				if (tabBarIndex > 0)
 				{
 					this.swapElementsAt(tabBarIndex, contentIndex);
 				}
 			}
-			else if (event.newState == "normalWithBottomTabBar" || 
-					 event.newState == "normalWithRightTabBar")
+			else if (event.newState == "normalWithBottomTabBar" ||
+					event.newState == "normalWithRightTabBar")
 			{
 				if (tabBarIndex == 0)
 				{
@@ -125,15 +126,32 @@
 				}
 			}
 		}
-		
+
+		private function onTabNavigatorCurrentStateChanging(event:StateChangeEvent):void
+		{
+			this.setSkinLayout(event.newState);
+		}
+
+		private function setSkinLayout(state:String):void
+		{
+			if (state == "normal" || state == "normalWithTopTabBar"	|| state == "normalWithBottomTabBar")
+			{
+				this.layout = this.getVerticalLayoutWithoutGap();
+			}
+			else
+			{
+				this.layout = this.getHorizontalLayoutWithoutGap();
+			}
+		}
+
 		private function getVerticalLayoutWithoutGap():VerticalLayout
 		{
 			var vertLayout:VerticalLayout = new VerticalLayout();
 			vertLayout.gap = 0;
-			
+
 			return vertLayout;
 		}
-		
+
 		private function getHorizontalLayoutWithoutGap():HorizontalLayout
 		{
 			var horizontalLayout:HorizontalLayout = new HorizontalLayout();
@@ -143,7 +161,7 @@
 		}
 		]]>
 	</fx:Script>
-	
+
 	<s:states>
 		<s:State name="normal" />
 		<s:State name="disabled" />
@@ -152,19 +170,15 @@
 		<s:State name="normalWithRightTabBar"/>
 		<s:State name="normalWithBottomTabBar" stateGroups="topBottom"/>
 	</s:states>
-	
+
 	<tabnavigator:TabBarWithScroller id="tabBar" dataProvider="{contentGroup}"
-									 layout.normal="{getHorizontalLayoutWithoutGap()}"
-									 layout.normalWithTopTabBar="{getHorizontalLayoutWithoutGap()}"
-									 layout.normalWithBottomTabBar="{getHorizontalLayoutWithoutGap()}"
-									 layout.normalWithLeftTabBar="{getVerticalLayoutWithoutGap()}"
-									 layout.normalWithRightTabBar="{getVerticalLayoutWithoutGap()}"
-									 orientation="{hostComponent.orientation}" scrollable="{hostComponent.scrollable}"
+									 orientation="{hostComponent.orientation}"
+									 scrollable="{hostComponent.scrollable}"
 									 width.topBottom="{hostComponent.width}"/>
 
 	<!--- @private -->
 	<s:Group id="content" width="100%" height="100%">
-		
+
 		<!-- border -->
 		<!--- @private -->
 		<s:Rect left="0" right="0" top="0" bottom="0" id="border">
@@ -173,7 +187,7 @@
 				<s:SolidColorStroke id="borderStroke" weight="1"/>
 			</s:stroke>
 		</s:Rect>
-		
+
 		<!-- fill -->
 		<!--- Defines the background appearance of the list-based component. -->
 		<s:Rect id="background" left="1" right="1" top="1" bottom="1" >
@@ -182,13 +196,17 @@
 				<s:SolidColor id="bgFill" color="0xFFFFFF" />
 			</s:fill>
 		</s:Rect>
-		
+
 		<!--
 		Note: setting the minimum size to 0 here so that changes to the host component's
 		size will not be thwarted by this skin part's minimum size.   This is a compromise,
 		more about it here: http://bugs.adobe.com/jira/browse/SDK-21143
 		-->
 		<!--- @copy spark.containers.Navigator#contentGroup -->
-		<containers:NavigatorGroup id="contentGroup" left="0" right="0" top="0" bottom="0" minWidth="0" minHeight="0"/>
+		<containers:NavigatorGroup id="contentGroup" left="0" right="0" top="0" bottom="0"
+								   minWidth="0" minHeight="0" />
+
 	</s:Group>
+
+
 </s:SparkSkin>
