- Initial new type Include.as added - New component's property editor file list now generates upon Moonshine xhtml files list - Stage component UI update still awaiting (reference prominic/Moonshine-IDE#199)

--- a/src/view/ComponentList.mxml
+++ b/src/view/ComponentList.mxml
@@ -28,6 +28,7 @@
 		import view.primeFaces.surfaceComponents.components.AutoCompleteDropDownList;
 		import view.primeFaces.surfaceComponents.components.Button;
 		import view.primeFaces.surfaceComponents.components.Fieldset;
+		import view.primeFaces.surfaceComponents.components.Include;
 		import view.primeFaces.surfaceComponents.components.InputMask;
 		import view.primeFaces.surfaceComponents.components.InputNumber;
 		import view.primeFaces.surfaceComponents.components.InputText;
@@ -81,7 +82,8 @@
 					new ComponentListItem("OutputLabel", OutputLabel),
 					new ComponentListItem("AutoComplete", AutoCompleteDropDownList),
 					new ComponentListItem("TabView", TabView),
-					new ComponentListItem("Fieldset", Fieldset)
+					new ComponentListItem("Fieldset", Fieldset),
+					new ComponentListItem("Include", Include)
 				]);
 			}
 
